# AntrojiProgramavimoPraktika

./: Kirill_Korobov_PI24_ND.docx  Kirill_Korobov_PI24_TD.docx
AkademineIS/: CMakeLists.txt  main.cpp
AkademineIS_Qt/: CMakeLists.txt  adminwindow.cpp  adminwindow.h  destytojawindow.cpp  destytojawindow.h  exceptions.h  loginwindow.cpp  loginwindow.h  main.cpp  models.cpp  models.h  repositories.cpp  repositories.h  studentwindow.cpp  studentwindow.h
